<resources>
    <string name="app_name">Stadying Map</string>
    <string name="button">Button</string>
    <string name="nameRegistr">Регистрация</string>
    <string name="nameBox">Введите имя</string>
    <string name="namePass">Введите пароль</string>
    <string name="getReg">Зарегистрироваться</string>
    <string name="showData">Показать данные регистрации</string>
    <string name="ittech">Вам нравятся IT- технологии ?</string>
    <string name="yes">Да</string>
    <string name="No">Нет</string>
    <string name="humanitiesandart">Гуманитарные науки и исскуство</string>
    <string name="fragment1_interes">Что нам нравится?</string>
    <string name="business">Бизнес</string>
    <string name="cooking">Кулинария</string>
    <string name="computer_science">Компьютерные науки</string>
    <string name="data_science">Наука о данных</string>
    <string name="fragment1_finish">Готово</string>
    <string name="title_activity_navigation_drawer">Stadying Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Guest</string>
    <string name="nav_header_subtitle">Guest@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_news">Новости</string>
    <string name="nav_lessons">Обучение</string>
    <string name="nav_tasks">Избранное</string>
    <string name="nav_settings">Настройки</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="askMe">Вы знаете чему хотите обучаться ?</string>
    <string name="wdefinition">Нет,хочу определиться</string>
    <string name="ydecided">Знаю , хочу найти информацию</string>
    <string name="countQuestion">Вопрос</string>
    <string name="countQuestion1">из 30 </string>
    <string name="mQuantityFeedBack">70</string>
    <string name="mAverageRating">mAverageRating</string>
    <string name="mNameCourse">Название курса</string>
    <string name="mAuthorCourse">Автор курса</string>
    <string name="mProfessionDef">Выберете одно из Двух</string>
    <string name="quest_profdef">Вопрос</string>
    <string name="quest_profdef_continue">  </string>
    <string name="quest_profdef_continue_two">из 30</string>
    <string name="quest_profdef_first">1</string>
    <string name="input_button">Войти</string>

</resources>
