<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_rss_feed_black_24dp"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/nav_lessons" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_tasks" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
