<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Registration_activity"
    android:orientation="vertical">
    <TextView
        android:id="@+id/Registrr"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:text="@string/nameRegistr"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        />
    <TextView
        android:id="@+id/Registr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameRegistr"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/Registrr"

        />

    <EditText
        android:id="@+id/nameBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Registr"
        android:layout_marginTop="0dp"
        android:hint="@string/nameBox"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameBox"
        android:layout_marginTop="0dp"
        android:hint="@string/namePass"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passBox"
        android:layout_marginTop="0dp"
        android:text="@string/getReg"
        android:layout_centerHorizontal="true"/>




</RelativeLayout>